# serverjars-py

./: CHANGELOG.md  README.md  TODO.md  build.bat  debug.bat  example.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-publish.yml  tests.yml
ServerJars/: __init__.py  constants.py
docs/: conf.py  index.rst  modules.rst  serverjars.rst
examples/: download_jar.py
serverjars/: __init__.py  constants.py  exception.py  modded.py  software.py  vanilla.py
serverjars_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: download_jar.py  fetch_all.py  fetch_details.py  fetch_latest.py  fetch_subtypes.py  fetch_types.py  test_download_jar.py  test_fetch_all.py  test_fetch_all_types.py  test_fetch_details.py  test_fetch_jar.py  test_fetch_latest.py  test_fetch_types.py
