[metadata]
name = serverjars-api
version = attr: serverjars.__version__
author = Legopitstop
author_email=officiallegopitstop@gmail.com
description=The unofficial Python wrapper for serverjars.com
keywords=ServerJars,Minecraft,Servers,Bedrock,API
url=https://github.com/legopitstop/serverjars-py/
long_description=file: README.md
long_description_content_type=text/markdown
license=MIT
# Chose either "3 - Alpha", "4 - Beta" or "5 - Production/Stable" as the current state of your package
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    requests
