[metadata]
name = serverjars-api
version = attr: serverjars.__version__
author = Legopitstop
author_email=contact@lpsmods.dev
description=Download and fetch details about Minecraft server jars.
keywords=ServerJars,Minecraft,Servers,Bedrock,API
url=https://github.com/legopitstop/serverjars-py/
project_urls=
    Download=https://github.com/legopitstop/serverjars-py/releases
    Documentation=https://docs.lpsmods.dev/serverjars-api
    Source Code=https://github.com/legopitstop/serverjars-py
long_description=file: README.md
long_description_content_type=text/markdown
license=MIT
license_file=LICENSE
# Chose either "3 - Alpha", "4 - Beta" or "5 - Production/Stable" as the current state of your package
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11

[options]
packages = serverjars
python_requires = >=3.8
install_requires =
    requests
    pydantic
zip_safe=False

[options.extras_require]
testing=
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
serverjars = py.typed

[flake8]
max-line-length=160